# epita-mlops

./: README.md  docker-compose.yml
discord-producer/: .dockerignore  app.py  consumer.py  logger.py  producer.py  pyproject.toml
drift-detector/: app.py  pyproject.toml  requirements.txt
model/: .dockerignore  app.py  pyproject.toml  requirements.txt
prediction-consumer/: Dockerfile  app.py  logger.py  pyproject.toml  requirements.txt
