[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Corentin Duchêne <corentin.duchene@epita.fr>"]

[tool.poetry.dependencies]
python = "3.8.16"
python-dotenv = "^0.21.0"
loguru = "^0.6.0"
kafka-python = "^2.0.2"
transformers = "^4.25.1"
torch = "1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
